# PQLite

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Makefile.in  Makefile.msc  NOTICE  README.md  SECURITY.md  auto.def  magic.txt  main.mk  sqlite.pc.in  sqlite3.1  sqlite3.pc.in
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  packages.yml  release.yml  security-audit.yml
bindings/: README.md
bindings/dotnet/PQLite/: PQLiteConnection.cs
bindings/go/: go.mod  pqlite.go
bindings/java/src/main/java/io/dyber/pqlite/: PQLiteConnection.java
bindings/node/: package.json
bindings/node/lib/: index.js
bindings/python/: setup.py
bindings/python/pqlite3/: __init__.py
bindings/rust/libpqlite3-sys/: Cargo.toml  README.md  build.rs
bindings/rust/pqlite/: Cargo.toml  README.md
bindings/rust/pqlite/src/: lib.rs
debian/: changelog  control  copyright  rules
examples/: encrypt_example.c
packaging/homebrew/: pqlite.rb
src/: main.c  pager.c  pragma.c  shell.c.in  wal.c
src/pqc/: pqc_audit.c  pqc_audit.h  pqc_backup.c  pqc_backup.h  pqc_codec.c  pqc_codec.h  pqc_column_encrypt.c  pqc_column_encrypt.h  pqc_common.c  pqc_common.h  pqc_fips.c  pqc_fips.h  pqc_integrity.c  pqc_integrity.h  pqc_kem.c  pqc_kem.h  pqc_keymanager.c  pqc_keymanager.h  pqc_masking.c  pqc_masking.h  pqc_mem.c  pqc_mem.h  pqc_rls.c  pqc_rls.h  pqc_sig.c  pqc_sig.h  pqc_sql_funcs.c  pqc_sql_funcs.h  pqc_wal_sign.c  pqc_wal_sign.h  pqlite3_api.h
test/pqc/: pqc_basic_test.c
