[package]
name = "libpqlite3-sys"
version = "1.1.0"
edition = "2021"
authors = ["Dyber, Inc. <engineering@dyber.io>"]
description = "Native bindings to PQLite (Post-Quantum SQLite)"
license = "MIT"
repository = "https://github.com/dyber-pqc/PQLite"
documentation = "https://docs.rs/libpqlite3-sys"
keywords = ["sqlite", "pqc", "post-quantum", "encryption", "database"]
categories = ["database", "cryptography", "external-ffi-bindings"]
links = "pqlite3"
build = "build.rs"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
