[package]
name = "pqlite"
version = "1.1.0"
edition = "2021"
authors = ["Dyber, Inc. <engineering@dyber.io>"]
description = "Safe Rust bindings for PQLite (Post-Quantum SQLite)"
license = "MIT"
repository = "https://github.com/dyber-pqc/PQLite"
documentation = "https://docs.rs/pqlite"
keywords = ["sqlite", "pqc", "post-quantum", "encryption", "database"]
categories = ["database", "cryptography"]

readme = "README.md"

[dependencies]
libpqlite3-sys = "1.1.0"
